# Selitys

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyzer.py  cli.py  docker-compose.yml  generator.py  main.py  pyproject.toml  render.yaml  schema.py  selitys-v2-spec.md  selitys.pen  selitys_prompt.md
.github/workflows/: ci.yml  publish.yml
backend/: app.py  models.py  requirements.txt
docs/: selitys-analysis.schema.json
fixtures/test_backend/: README.md  test_api_comprehensive.py
fixtures/test_backend/alembic/: env.py
fixtures/test_backend/alembic/versions/: 55034ad47802_create_invoice_tables.py  d87dfafd3560_add_product_units_and_base_unit.py
fixtures/test_backend/app/: admin.py  main.py
fixtures/test_backend/app/core/: dependencies.py
fixtures/test_backend/app/models/: invoice_table.py  product_table.py  (+2 more)
fixtures/test_backend/scripts/: seed_dev_data.py  seed_users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  router.js  style.css  useTheme.js
frontend/src/components/: ApiSurface.vue  Collapsible.vue  DomainEntities.vue  EntryPoints.vue  MetricCards.vue  RepoInput.vue  RiskSummary.vue  Sidebar.vue  Tooltip.vue
frontend/src/pages/: ArchitectureView.vue  AskView.vue  ConfigView.vue  FirstReadView.vue  Overview.vue  RequestFlowView.vue  TreeView.vue
samples/selitys_test/: selitys-overview.md
scripts/: bump_version.py
selitys_test/: selitys-architecture.md
src/selitys/: __init__.py  cli.py  schema.py
src/selitys/analysis/: __init__.py  js_ts.py  model.py  python_ast.py
src/selitys/core/: __init__.py  analyzer.py  fact_pipeline.py  qa.py  qa_llm.py  scanner.py
src/selitys/output/: __init__.py  generator.py
test2/: selitys-first-read.md  selitys-request-flow.md
test_backend/: pyproject.toml
test_backend/alembic/versions/: 04383611fec3_add_invoices.py  1a1aaf069c14_smoke_revision.py  3359fbc0fb10_added_fk_users_to_invoice_table_and_.py  65a818bbc5d9_initial.py  883315fd2f64_add_users_table.py  9ba492a1f663_add_audit_logs_table.py  bfbca086fb2e_create_users_table.py  c874736105a3_added_deleted_at_column_to_key_tables.py
test_backend/app/: .env
test_backend/app/_db/: vigilis.db  vigilis.db.bak
test_backend/app/api/: router.py
test_backend/app/api/routes/: invoices_route.py  products_route.py
test_backend/app/core/: config.py  security.py
test_backend/app/db/: session.py
test_backend/app/models/: __init__.py  audit_log_table.py  invoice_item_table.py  stock_adjustment_table.py
test_backend/app/schemas/: invoice_item_schema.py  product_schema.py  user_schema.py
test_backend/app/services/: audit_service.py  invoice_service.py  product_service.py  user_service.py
test_backend/scripts/: smoke_test_invoices.sh
test_backend/tests/: test_auth_rbac.py  test_invoices_flow.py
tests/: test_analyzer.py  test_api.py  test_output_generation.py  test_python_ast.py  test_scanner.py
(+6 files in other folders)
