[project]
name = "selitys"
version = "2.3.0"
description = "A developer onboarding tool that explains backend codebases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "watchfiles>=0.21.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-languages>=1.10.2",
    "pathspec>=0.12.1",
]

[project.scripts]
selitys = "selitys.cli:app"

[project.optional-dependencies]
llm = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/selitys"]
