[project]
name = "selitys"
version = "3.2.1"
description = "A developer onboarding tool that explains backend codebases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "watchfiles>=0.21.0",
    "tree-sitter>=0.21.3,<0.22",
    "tree-sitter-languages>=1.10.2,<2",
    "pathspec>=0.12.1",
]

[project.scripts]
selitys = "selitys.cli:app"

[project.optional-dependencies]
llm = [
    "httpx>=0.28.1",
]
backend = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
]

test = [
    "pytest>=8.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/selitys"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
