[project]
name = "vigilis-pharmacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "itsdangerous>=2.2.0",
    "pandas>=2.2.3",
    "alembic>=1.17.2",
    "requests>=2.32.5",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "sqladmin>=0.22.0",
    "reportlab>=4.4.7",
]
